--- a/src/components/x/sticky.css
+++ b/src/components/x/sticky.css
@@ -18,6 +18,9 @@ All right reserved.
   top: 0;
 }
 @media (--medium) {
+  .s\:sticky { position: sticky !important; top: 0 }
+}
+@media (--medium) {
   .m\:sticky { position: sticky !important; top: 0 }
 }
 @media (--large) {
