--- a/src/components/x/dropdown.css
+++ b/src/components/x/dropdown.css
@@ -88,24 +88,24 @@ All right reserved.
 .dropdown {
   position: relative;
   
-  &.dropdown_right > [x-dropdown] {
+  &.dropdown--right > [x-dropdown] {
     right: 0;
     left: auto;
   }
-  &.dropdown_bottom > [x-dropdown] {
+  &.dropdown--bottom > [x-dropdown] {
     bottom: 100%;
     top: auto;
     transform-origin: bottom;
   }
-  &.dropdown_ready > [x-dropdown] {
+  &.dropdown--ready > [x-dropdown] {
     display: block;
     pointer-events: auto;
   }
-  &.dropdown_open > [x-dropdown] {
+  &.dropdown--open > [x-dropdown] {
     opacity: 1;
     transform: scale(1);
   }
-  &.dropdown_wrap > [x-dropdown] li {
+  &.dropdown--wrap > [x-dropdown] li {
     & > a,
     & > span {
       white-space: wrap;
